--- a/app/src/main/res/layout/item_heart_person.xml
+++ b/app/src/main/res/layout/item_heart_person.xml
@@ -21,58 +21,58 @@
         android:layout_height="300sp"
         android:layout_gravity="center"/>
 
-    <TextView
-        android:id="@+id/textViewDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="19sp"
-        android:textColor="@color/colorBlack"
-        android:layout_margin="7sp"
-        android:gravity="center"/>
+    <!--<TextView-->
+        <!--android:id="@+id/textViewDescription"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="19sp"-->
+        <!--android:textColor="@color/colorBlack"-->
+        <!--android:layout_margin="7sp"-->
+        <!--android:gravity="center"/>-->
 
-    <TextView
-        android:id="@+id/textViewSkills"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="19sp"
-        android:textColor="@color/colorBlack"
-        android:layout_margin="7sp"
-        android:gravity="center"/>
+    <!--<TextView-->
+        <!--android:id="@+id/textViewSkills"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="19sp"-->
+        <!--android:textColor="@color/colorBlack"-->
+        <!--android:layout_margin="7sp"-->
+        <!--android:gravity="center"/>-->
 
-    <TextView
-        android:id="@+id/textViewEquipments"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="19sp"
-        android:textColor="@color/colorBlack"
-        android:layout_margin="7sp"
-        android:gravity="center"/>
+    <!--<TextView-->
+        <!--android:id="@+id/textViewEquipments"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="19sp"-->
+        <!--android:textColor="@color/colorBlack"-->
+        <!--android:layout_margin="7sp"-->
+        <!--android:gravity="center"/>-->
 
-    <TextView
-        android:id="@+id/textViewMoney"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="19sp"
-        android:textColor="@color/colorBlack"
-        android:layout_margin="7sp"
-        android:gravity="center"/>
+    <!--<TextView-->
+        <!--android:id="@+id/textViewMoney"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="19sp"-->
+        <!--android:textColor="@color/colorBlack"-->
+        <!--android:layout_margin="7sp"-->
+        <!--android:gravity="center"/>-->
 
-    <TextView
-        android:id="@+id/textViewHealth"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="19sp"
-        android:textColor="@color/colorBlack"
-        android:layout_margin="7sp"
-        android:gravity="center"/>
+    <!--<TextView-->
+        <!--android:id="@+id/textViewHealth"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="19sp"-->
+        <!--android:textColor="@color/colorBlack"-->
+        <!--android:layout_margin="7sp"-->
+        <!--android:gravity="center"/>-->
 
-    <TextView
-        android:id="@+id/textViewStatus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="19sp"
-        android:textColor="@color/colorBlack"
-        android:layout_margin="7sp"
-        android:gravity="center"/>
+    <!--<TextView-->
+        <!--android:id="@+id/textViewStatus"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="19sp"-->
+        <!--android:textColor="@color/colorBlack"-->
+        <!--android:layout_margin="7sp"-->
+        <!--android:gravity="center"/>-->
 
 </LinearLayout>
