--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="padding_ten">10sp</dimen>
     <dimen name="padding_fifteen">15sp</dimen>
 
     <dimen name="margin_fifteen">15sp</dimen>
     <dimen name="margin_seven">7sp</dimen>
-    
+    <dimen name="margin_three">3sp</dimen>
+
     <integer name="animation_duration">2000</integer>
 </resources>
